k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: capstone1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: backend
          image: 082846230300.dkr.ecr.ap-south-1.amazonaws.com/capstone1-backend:6
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "512Mi"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: capstone1
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
