k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: capstone1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: frontend
          image: 082846230300.dkr.ecr.ap-south-1.amazonaws.com/capstone1-frontend:6
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
              ephemeral-storage: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: capstone1
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
